# rtype

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  conanprofile  sonar-project.properties
.github/workflows/: build.yml  main.yml
.scannerwork/: report-task.txt
client/: CMakeLists.txt
client/assets/: message.txt
client/src/: Exception.cpp  Exception.hpp  GameClient.cpp  GameClient.hpp  main.cpp
client/src/Network/: Client.cpp  Client.hpp
client/src/engine/core/ecs/: assert.hpp  benchmark.cpp  config.hpp  types.hpp
client/src/engine/core/ecs/component/: Component.hpp  ComponentBase.hpp  ComponentManager.hpp  IComponent.hpp
client/src/engine/core/ecs/entity/: Entity.hpp  EntityManager.hpp
client/src/engine/core/ecs/memory/: IObjectPool.hpp  ObjectPool.hpp  Poolable.hpp
client/src/engine/core/ecs/system/: ISystem.hpp  System.hpp  SystemManager.hpp
client/src/engine/core/events/: ACustomEvent.hpp  EventManager.cpp  EventManager.hpp  IEvent.hpp  MouseEvent.hpp
client/src/engine/utils/: Singleton.hpp
client/src/game/: ABehaviour.hpp  Game.cpp  Game.hpp
client/src/game/behaviours/: BugBehaviour.cpp  BugBehaviour.hpp  ButtonBehaviour.cpp  ButtonBehaviour.hpp  CameraBehaviour.cpp  CameraBehaviour.hpp  MissilePlayerBehaviour.cpp  MissilePlayerBehaviour.hpp  NavButtonBehaviour.cpp  NavButtonBehaviour.hpp  PataBehaviour.cpp  PataBehaviour.hpp  PlayerBehaviour.cpp  PlayerBehaviour.hpp  ScantBehaviour.cpp  ScantBehaviour.hpp  TextInputBehaviour.cpp  TextInputBehaviour.hpp
client/src/game/behaviours/buttons/: CreateButtonBehaviour.cpp  CreateButtonBehaviour.hpp  JoinButtonBehaviour.cpp  JoinButtonBehaviour.hpp  LobbyIdInputBehaviour.cpp  LobbyIdInputBehaviour.hpp  StartButtonBehaviour.cpp  StartButtonBehaviour.hpp
client/src/game/components/: AnimationComponent.cpp  AnimationComponent.hpp  ColorComponent.cpp  ColorComponent.hpp  InputComponent.cpp  InputComponent.hpp  NavDirectionComponent.cpp  NavDirectionComponent.hpp  ScaleComponent.cpp  ScaleComponent.hpp  TextComponent.cpp  TextComponent.hpp
client/src/game/systems/: AnimationSystem.cpp  AnimationSystem.hpp  BackgroundSystem.cpp  BackgroundSystem.hpp  EventSystem.cpp  EventSystem.hpp  InputSystem.cpp  InputSystem.hpp  SpriteSystem.cpp  SpriteSystem.hpp  TextSystem.cpp  TextSystem.hpp
client/src/handlers/: AHandlerUDP.cpp  AHandlerUDP.hpp
client/src/handlers/ChargeHandler/: ChargeHandler.cpp  ChargeHandler.hpp
client/src/handlers/DestroyHandler/: DestroyHandler.cpp  DestroyHandler.hpp
client/src/handlers/DropHandler/: DropHandler.cpp  DropHandler.hpp
client/src/handlers/GameStateHandler/: GameStateHandler.cpp  GameStateHandler.hpp
client/src/handlers/GrabHandler/: GrabHandler.cpp  GrabHandler.hpp
client/src/handlers/HitHandler/: HitHandler.cpp  HitHandler.hpp
client/src/handlers/JoinHandler/: JoinHandler.cpp  JoinHandler.hpp
client/src/handlers/LeaveHandler/: LeaveHandler.cpp  LeaveHandler.hpp
client/src/handlers/MoveHandler/: MoveHandler.cpp  MoveHandler.hpp
client/src/handlers/PositionHandler/: PositionHandler.cpp  PositionHandler.hpp
client/src/handlers/ShootHandler/: ShootHandler.cpp  ShootHandler.hpp
client/src/handlers/SpawnHandler/: SpawnHandler.cpp  SpawnHandler.hpp
client/tests/: CMakeLists.txt  tests_entity.cpp
config_file/: definitions.json
config_file/scene/: create.json  join.json  lobby.json  menu.json  stage1.json  stage1.tmp  template.json
core/: BinaryProtocolCommunication.hpp
doc/: rfc.md
scene/: stage1.json  template.json
server/: CMakeLists.txt  ex.json
server/include/: ISocket.hpp  Server.hpp
server/src/: Config.cpp  Config.hpp  Exception.cpp  Exception.hpp  GameServer.cpp  GameServer.hpp  Player.hpp  Server.cpp  Server.hpp  main.cpp
server/src/Network/: IServer.hpp  Server.cpp  Server.hpp
server/src/game/: ABehaviour.cpp  ABehaviour.hpp
server/src/game/behaviours/: BugBehaviour.cpp  BugBehaviour.hpp  CameraBehaviour.cpp  CameraBehaviour.hpp  MissilePlayerBehaviour.cpp  MissilePlayerBehaviour.hpp  PataBehaviour.cpp  PataBehaviour.hpp  PlayerBehaviour.cpp  PlayerBehaviour.hpp  ScantBehaviour.cpp  ScantBehaviour.hpp
server/src/handlers/: AHandler.cpp  AHandler.hpp  AHandlerTCP.cpp  AHandlerTCP.hpp  AHandlerUDP.cpp  AHandlerUDP.hpp  IHandler.cpp  IHandler.hpp
server/src/handlers/TCP/AskJoinHandler/: AskJoinHandler.cpp  AskJoinHandler.hpp
server/src/handlers/TCP/CreateHandler/: CreateHandler.cpp  CreateHandler.hpp
server/src/handlers/UDP/ChargeHandler/: ChargeHandler.cpp  ChargeHandler.hpp
server/src/handlers/UDP/DestroyHandler/: DestroyHandler.cpp  DestroyHandler.hpp
server/src/handlers/UDP/DropHandler/: DropHandler.cpp  DropHandler.hpp
server/src/handlers/UDP/GameStateHandler/: GameStateHandler.cpp  GameStateHandler.hpp
server/src/handlers/UDP/GrabHandler/: GrabHandler.cpp  GrabHandler.hpp
server/src/handlers/UDP/HitHandler/: HitHandler.cpp  HitHandler.hpp
server/src/handlers/UDP/JoinHandler/: JoinHandler.cpp  JoinHandler.hpp
server/src/handlers/UDP/LeaveHandler/: LeaveHandler.cpp  LeaveHandler.hpp
server/src/handlers/UDP/MoveHandler/: MoveHandler.cpp  MoveHandler.hpp
server/src/handlers/UDP/PositionHandler/: PositionHandler.cpp  PositionHandler.hpp
server/src/handlers/UDP/ShootHandler/: ShootHandler.cpp  ShootHandler.hpp
server/src/handlers/UDP/SpawnHandler/: SpawnHandler.cpp  SpawnHandler.hpp
server/src/lobby/: Lobby.cpp  Lobby.hpp  LobbyDispatcher.cpp  LobbyDispatcher.hpp  LobbyIDGenerator.cpp  LobbyIDGenerator.hpp  LobbyManagerThread.cpp  LobbyManagerThread.hpp
server/tmp/include/: ISocket.hpp  Socket.hpp
server/tmp/src/: Server.cpp  Server.hpp  main.cpp
server/tmp/src/Network/: Socket.cpp
tests/: CMakeLists.txt  main.cpp  tests_protocol.cpp
utils/: Clock.hpp  Exception.hpp  ResourceLock.hpp
